// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyState /> component should render Empty State 1`] = `
.emotion-0 {
  padding: 48px 32px;
  background-color: #F8F9FA;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 8px;
  border: 1px dashed #D3D4D5;
  width: 100%;
  height: 100%;
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    padding: 64px 128px;
  }
}

.emotion-2 {
  text-align: center;
}

.emotion-4 {
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #323232;
}

@media only screen and (min-width:900px) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-6 {
  text-align: center;
  padding-top: 8px;
  padding-bottom: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-6 {
    padding-top: 12px;
  }
}

.emotion-8 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #7C7C7D;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="empty-state"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4 emotion-5"
        color="textPrimary"
        data-testid="typography"
      >
        Title here
      </h2>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <p
        class="emotion-8 emotion-5"
        color="textSecondary"
        data-testid="typography"
      >
        Some description here.
      </p>
    </div>
  </div>
</div>
`;

exports[`<EmptyState /> component should render Empty State with a Button as a children 1`] = `
.emotion-0 {
  padding: 48px 32px;
  background-color: #F8F9FA;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 8px;
  border: 1px dashed #D3D4D5;
  width: 100%;
  height: 100%;
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    padding: 64px 128px;
  }
}

.emotion-2 {
  text-align: center;
}

.emotion-4 {
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #323232;
}

@media only screen and (min-width:900px) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-6 {
  text-align: center;
  padding-top: 8px;
  padding-bottom: 24px;
}

@media only screen and (min-width: 600px) {
  .emotion-6 {
    padding-top: 12px;
  }
}

.emotion-8 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #7C7C7D;
}

.emotion-10 {
  text-transform: uppercase;
  border: 0;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  padding: 12px 24px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #FFFFFF;
  background-color: #036DC1;
}

.emotion-10:focus {
  box-shadow: 0px 2px 1px 0px #1A1A1A0D,0px 0px 0px 4px #E6F5FF;
  background-color: #036DC1;
}

.emotion-10:disabled {
  opacity: 38%;
}

@media only screen and (min-width: 600px) {
  .emotion-10 {
    width: auto;
  }
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-10:hover {
  color: #FFFFFF;
  background-color: #013C6B;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="empty-state"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4 emotion-5"
        color="textPrimary"
        data-testid="typography"
      >
        Title here
      </h2>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <p
        class="emotion-8 emotion-5"
        color="textSecondary"
        data-testid="typography"
      >
        Some description here.
      </p>
    </div>
    <button
      class="emotion-10 emotion-11"
      color="primary"
      data-testid="undefined-button"
    >
      Button
    </button>
  </div>
</div>
`;
